same text changed

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="service_item service_bg2">
                <img src="icons/shelter.png" alt="icon">
                <h3>Shelter for a family</h3>
-               <p>we Bangladesh works with partners and volunteers to provide decent homes as a way out of poverty. Responding to disasters such as cyclones or storms has enabled to help Bangladeshi families rebuild more resilient homes.</p>
+               <p>This foundation works with partners and volunteers to provide decent homes as a way out of poverty. Responding to disasters such as cyclones or storms has enabled to help Bangladeshi families rebuild more resilient homes.</p>
    
             </div>
             <div class="service_item service_bg3">
@@ -132,7 +132,7 @@
    <section id="subscribe_section">
       <div class="section_heading_text">
          <h2>Get My Updates</h2>
-         <p>Stand by the helpless miserable people and get update about their condition subscribe our website</p>
+         <p>Stand by the helpless miserable people and to get update about their condition subscribe our website</p>
 
       </div>
      <form action="" class="subscribe_box">
